# stream-side

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  audio_received.opus_dump  concealment_slice.hevc  output.txt
.github/workflows/: build.yml
android-app/app/: build.gradle
android-app/app/src/main/java/com/example/streamreceiver/: MainActivity.kt  NativeLib.kt
common/: Cargo.toml
common/src/: clock.rs  fec.rs  lib.rs
common/src/fec/: assembler.rs  assembly_log.rs  builder.rs  decode.rs  decode_task.rs  encode.rs  frame_builder.rs  group_builder.rs  mod.rs  slice_builder.rs  stats.rs
proj_updated/: Cargo.toml
proj_updated/android-app/: settings.gradle
proj_updated/android-app/app/src/main/: AndroidManifest.xml
proj_updated/android-app/app/src/main/java/com/example/streamreceiver/: MainActivity.kt  NativeLib.kt
proj_updated/common/src/: lib.rs
proj_updated/receiver/: Cargo.toml
proj_updated/receiver/src/: lib.rs  main.rs  network.rs  shader.wgsl
proj_updated/receiver/src/backend/: android.rs  desktop.rs  mod.rs
proj_updated/sender/src/: encode.rs  main.rs  quic.rs
proj_updated/sender/src/capture/: linux.rs  mod.rs
receiver/: Cargo.toml  output.txt
receiver/benches/: decode_profile.rs
receiver/src/: lib.rs  main.rs  network.rs  types.rs
receiver/src/backend/: android.rs  audio_cpal.rs  audio_oboe.rs  audio_output.rs  desktop.rs  hevc_parser.rs  macos.rs  mod.rs  vaapi_concealment.rs
receiver/src/network/: connection.rs  endpoint.rs  identity.rs  mod.rs  tasks.rs  utils.rs
sender/: Cargo.toml
sender/benches/: encode_profile.rs
sender/src/: 1encode.rs  encode.rs  lib.rs  main.rs  quic.rs  ui.rs
sender/src/capture/: linux.rs  linux_audio.rs  mod.rs  wlroots.rs
sender/src/encode/: mod.rs  nvenc.rs  vaapi.rs
sender/src/network/: clients.rs  congestion.rs  connections.rs  endpoint.rs  handlers.rs  mod.rs  serializer.rs
src/: encode.rs  lib.rs  main.rs  quic.rs
