[package]
name = "streamcapture"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = {version = "0.13.9", features = ["screencast"]}
pipewire = "0.9.2"
tokio = {version = "1.50.0", features = ["full"]}
libc = "0.2.184"
ffmpeg-next = "8.1.0"
quinn = "0.11.9"
rustls = { version = "0.23.37", features = ["ring"] }
rcgen = "0.14.7"
wgpu = "29.0.1"
winit = "0.30.13"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }

[lib]
name = "streamcapture"
path = "src/lib.rs"
