[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
bytes = { version = "1.11.1", features = ["serde"]}
serde_bytes = "0.11.19"
reed-solomon-erasure = "6.0.0"
log      = "0.4"
rayon = "1.12.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"