[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
# Определяем фичи
sender = []
receiver = []

[dependencies]
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
bytes = { version = "1.11.1", features = ["serde"]}
serde_bytes = "0.11.19"
reed-solomon-erasure = "6.0.0"
log      = "0.4"
rayon = "1.12.0"
lazy_static = "1.5.0"
tokio = { version = "1.50.0", features = ["sync", "time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"