[package]
name = "receiver"
version = "0.1.0"
edition = "2024"
license = "MIT"

# На Android собираем только cdylib (JNI library).
# На десктопе собираем и rlib (для бинаря), и саму библиотеку.
[lib]
name = "stream_receiver"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "receiver"
path = "src/main.rs"
# Бинарь имеет смысл только на десктопе
required-features = ["desktop"]

[features]
default = []
desktop = []

# ─────────────────────────────────────────
# Общие зависимости для ВСЕХ платформ
# ─────────────────────────────────────────
[dependencies]
common   = { path = "../common", features = ["receiver"] }
postcard = { version = "1.1", features = ["use-std"] }
serde    = { version = "1",   features = ["derive"] }
tokio    = { version = "1",   features = ["full"] }
quinn = { version = "0.11", features = ["rustls"] }
rustls   = { version = "0.23", features = ["ring"] }
rcgen    = "0.14"
once_cell = "1"
log      = "0.4"
bytes = "1.11.1"
reed-solomon-erasure = "6.0.0"
socket2 = "0.6.3"
# ─────────────────────────────────────────
# Только для десктопа (Linux / Windows / macOS)
# ─────────────────────────────────────────
[target.'cfg(not(target_os = "android"))'.dependencies]
ffmpeg-next = "8.1"
wgpu        = "29"
winit       = "0.30"
pollster    = "0.4"
bytemuck    = { version = "1", features = ["derive"] }
env_logger  = "0.11"
libc = "0.2.184"
ash = "0.38.0"

# ─────────────────────────────────────────
# Только для Android
# ─────────────────────────────────────────
[target.'cfg(target_os = "android")'.dependencies]
# Безопасные JNI-биндинги: передача Surface из Kotlin → Rust
jni = { version = "0.22.4", features = ["invocation"] }
# Сырые NDK FFI-биндинги: AMediaCodec, ANativeWindow
ndk-sys = "0.6"
# Логирование в logcat
android_logger = "0.14"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
sender = { path = "../sender" }

[[bench]]
name = "decode_profile"
harness = false