[package]
name = "sender"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.50.0", features = ["full"] }
ffmpeg-next = "8.1.0"
quinn = {version = "0.11.9", features = ["rustls"]}
rustls = { version = "0.23.37", features = ["ring"] }
rcgen = "0.14.7"
wgpu = "29.0.1"
winit = "0.30.13"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.11.1"
log      = "0.4"
socket2 = "0.6.3"
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger  = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13.9", features = ["screencast"] }
pipewire = "0.9.2"
libc = "0.2.184"
wayland-client = "0.31.14"
wayland-protocols = "0.32.12"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
memfd = "0.6.5"
gbm = "0.18.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encode_profile"
harness = false